configs/xmonad/xmonad.errors
$ /nix/store/qx0hj9kgasghdmyjxqlg2mmjfix420hd-ghc-9.8.2-with-packages/bin/ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -v0 -outputdir /home/umut/.config/xmonad/build-x86_64-linux -o /home/umut/.config/xmonad/xmonad-x86_64-linux

xmonad.hs:26:11: error: [GHC-21231]
    lexical error in string/character literal at character '\62057'
   |
26 |     [ "1:  Web"
   |           ^
